# tg-codegen

./: .gitignore  .isort.cfg  Makefile  Pipfile  asd.py  get_updaets.py  mkdocs.yml  pyproject.toml
aiogram/api/client/: base.py  bot.py
aiogram/api/methods/: __init__.py  add_sticker_to_set.py  answer_inline_query.py  base.py  create_new_sticker_set.py  edit_message_caption.py  edit_message_media.py  get_my_commands.py  get_updaets.py  get_updates.py  send_animation.py  send_audio.py  send_document.py  send_media_group.py  send_message.py  send_photo.py  send_poll.py  send_sticker.py  send_video.py  send_video_note.py  send_voice.py  set_chat_photo.py  set_sticker_set_thumb.py  set_webhook.py  upload_sticker_file.py
aiogram/api/types/: __init__.py  animation.py  bot_command.py  bot_command_scope.py  bot_command_scope_all_chat_administrators.py  bot_command_scope_all_group_chats.py  bot_command_scope_all_private_chats.py  bot_command_scope_chat.py  bot_command_scope_chat_administrators.py  bot_command_scope_chat_member.py  bot_command_scope_default.py  callback_game.py  callback_query.py  chat.py  chat_member.py  chat_permissions.py  chat_photo.py  chosen_inline_result.py  contact.py  dice.py  encrypted_credentials.py  (+69 more)
aiogram/types/: base.py
generator/: __main__.py  cli.py  consts.py  generator.py  normalizers.py  parser.py  specials.py  structures.py
generator/templates/: bot.py.jinja2  method.md.jinja2  method.py.jinja2  methods.py.jinja2  methods_list.md.jinja2  test_method.py.jinja2  type.md.jinja2  type.py.jinja2  types.py.jinja2  types_list.md.jinja2
(+126 files in other folders)
