[tool.poetry]
name = "aiogram-codegen"
version = "1.0.0"
description = "Code generator"
authors = ["Alex Root Junior <jroot.junior@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.3"
requests = "^2.22.0"
jinja2 = "^2.10.3"
isort = "^4.3.21"
black = "^19.10b0"
lxml = "^4.6.5"
aiohttp = "^3.6.2"
mypy = "^0.761"
autoflake = "^1.3.1"
pyyaml = "^5.3"
pypandoc = "^1.5"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
